<resources>
    <string name="app_name">App Lista Curso</string>
    <string name="txt_titulo">App Lista Curso</string>
    <string name="txt_hint_edit_curso_desejado">Nome do curso Desejado</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_LIMPAR">LIMPAR</string>
    <string name="txt_button_SALVAR">SALVAR</string>
    <string name="txt_button_FINALIZAR">FINALIZAR</string>
</resources>